<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/dialog_bg_curved"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title"
        android:textSize="20sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/work_experience_label" />

    <LinearLayout
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-condensed-light"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="Company Name"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_dialog_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/input_bg_curved_grey"
            android:cursorVisible="true"
            android:fontFamily="sans-serif-light"
            android:gravity="center|start|bottom"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:minHeight="48dp"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:textColor="@color/blackEffect"
            android:textSize="18sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-condensed-light"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="Position title"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_dialog_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/input_bg_curved_grey"
            android:cursorVisible="true"
            android:fontFamily="sans-serif-light"
            android:gravity="center|start|bottom"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:minHeight="48dp"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:textColor="@color/blackEffect"
            android:textSize="18sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-condensed-light"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="Experience duration"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_dialog_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/input_bg_curved_grey"
            android:cursorVisible="true"
            android:fontFamily="sans-serif-light"
            android:gravity="center|start|bottom"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:minHeight="48dp"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:textColor="@color/blackEffect"
            android:textSize="18sp"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <LinearLayout
        android:gravity="end"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_cancel"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_marginStart="16dp"
            android:id="@+id/btn_add"
            android:text="@string/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>